# datagotchi_sante

./: .gitignore  Makefile  README.md  app.db  config.py  explain_study.R  explain_study_updated.R  llm_explicability_prompts.md  llm_explicability_prompts.txt  microapp.py  pyproject.toml  study_2.R
app/: __init__.py  models.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/ml/: attributes.R  clean.py  constants.py  crossval.py  deploy.py  eda.py  feature_engineering.py  feature_selection.py  loaders.py  metrics.py  models.py  paper_additional_info.py  plots.py  post_analyses.py  sandbox.py  test.py  tracking.py  utils.py  visuals.py
app/ml/configs/: create_feature.py  deploy.py  eda.py  run_crossval.py  score_feature.py
code/: check_na.R  codebook.R  compute_score.R  eda.R  enviro_quartier.R
code/analysis/: music.R
code/cleaning/: ai.R  attention_check_check.R  bien_etre.R  comp_sante.R  comport_socio.R  compute_score.R  discrimination.R  enviro_quartier.R  enviro_travail.R  exp.R  inter_group.R  lifestyle.R  master_cleaning.R  political_behaviour.R  services_sante.R  ses.R  taille_gpt.R  valeurs.R
code/eda/: eda.R  mismatch.R
code/ml/: attributes.R  config.py  constants.py  crossval.py  deploy.py  feature_engeering.py  feature_engineering.py  feature_selection.py  generate_example.py  loaders.py  logging.conf  metrics.py  models.py  preprocessing.py  sandbox.py  test.py  tracking.py  utils.py  visuals.py
code/quota_check/: cc.R  quota_check.R
deploy/: microapp_corentin.conf  microapp_fvv.conf  microapp_nginx  microapp_nginx_corentin  microapp_nginx_fvv
migrations/versions/: b9c9660bee03_users_table.py  e15b35f9dad3_add_optional_interac.py
paper/boxplots/: conference_paper.ipynb  predictions.csv
scripts/: export_db.py  loop_make_command.py  regular_runner.py  reload_experiment.py  reload_experiment_vm.py  results_analyses.py  streamlit_logs.py  track_dumps.py  view_databases.py
(+47 files in other folders)
