[tool.poetry]
name = "datagotchi_sante"
version = "0.1.0"
description = ""
authors = ["Corentin Vande Kerckhove <corentinvdk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
pyreadstat = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
